golang/service.yml
apiVersion: v1
kind: Service
metadata:
  name: golang-service
spec:
  selector:
    app: golang
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
