golang/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golang-service
            port:
              name: http
